# nurvek-vehicle

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  check_db.py  main.py  pyproject.toml  test_cv_gui.py  train_lp_detector.py
docs/: example.md  modularization_plan.md  plan.md
src/api/: server.py
src/config/: settings.py
src/core/: ocr_utils.py  pipeline.py  qdrant_sync.py  schemas.py
src/database/: db_utils.py
src/utils/: drawing.py
web/: index.html
web/css/: style.css
web/js/: app.js
